# WatermelonDB

./: CHANGELOG-Unreleased.md  README.md  SECURITY.md  WatermelonDB.podspec  package.json
docs-website/docs/docs/: Installation.mdx
examples/typescript/: ts-example.ts
native/android-jsi/: build.gradle
native/android-jsi/src/main/cpp/: CMakeLists.txt
native/android/src/main/java/com/nozbe/watermelondb/: WatermelonDBPackage.java
native/ios/WatermelonDB/: JSIInstaller.mm
native/shared/: Database.cpp  Database.h  DatabaseBridge.cpp  Sqlite.cpp  Sqlite.h
native/sqlite-cipher-amalgamation/: .gitignore  NOTICE  README.md
scripts/: make.mjs  vendor-openssl.sh  vendor-sqlcipher.sh
src/: index.js
src/adapters/sqlite/: index.js  integrationTest.js  test.js  type.d.ts  type.js
src/adapters/sqlite/makeDispatcher/: index.native.js
